objects/Commission_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unternehmen</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provisionssätze (Unternehmen)</relationshipLabel>
        <relationshipName>Account_Commission_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CREATEDDATE_Old__c</fullName>
        <label>CREATEDDATE_Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_old__c</fullName>
        <label>ID_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kanzlei</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provisionssätze (Kanzlei)</relationshipLabel>
        <relationshipName>Legal_Account_Commission_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Provisionssatz_ID__c</fullName>
        <label>Old Provisionssatz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Produkt</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Families</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProvsatzImpID__c</fullName>
        <externalId>true</externalId>
        <label>ProvsatzImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Satz</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <description>Stores the commission rates which are used to calculate the commission</description>
    <label>Provisionssatz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisionssätze</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>